# projects

./: .gitignore  README.md
scripts/: calibrate_home.sh  calibrate_home_usbcan.py  scan_motors_robust.sh  setup_slcan.sh  stop_slcan.sh  teleop_4wd.sh
src/drivers/md_motor_hardware/: CMakeLists.txt  md_hardware_plugin.xml  package.xml
src/drivers/md_motor_hardware/include/md_hardware/: md_4wd_hardware.hpp
src/drivers/md_motor_hardware/src/: md_4wd_hardware.cpp
src/drivers/md_motor_hardware/test/: README.md  com.hpp  frbot_hardware.hpp  md_hardware.cpp  md_hardware.hpp
src/drivers/md_motor_hardware/test/config/: md_4wd_controllers.yaml  md_4wd_hardware.yaml  md_controllers.yaml
src/drivers/md_motor_hardware/test/launch/: md_4wd_test.launch.py  md_hardware_test.launch.py
src/drivers/md_motor_hardware/test/urdf/: md_4wd_robot.urdf.xacro  md_robot.urdf.xacro  md_ros2_control.urdf.xacro
src/drivers/myactuator_hardware/: CMakeLists.txt  myactuator_hardware_plugin.xml  package.xml
src/drivers/myactuator_hardware/include/myactuator_hardware/: myactuator_hardware_interface.hpp
src/drivers/myactuator_hardware/src/: myactuator_hardware_interface.cpp
src/drivers/myactuator_hardware/test/: README.md  arm_hardware_interface.cpp  arm_hardware_interface.hpp  direct_position_test.cpp  multi_motor_hardware_interface.cpp  multi_motor_hardware_interface.hpp  torque_hardware_interface.cpp  torque_hardware_interface.hpp
src/drivers/myactuator_hardware/test/config/: arm_usbcan_controllers.yaml  dual_motor_controllers.yaml  dual_motor_test.urdf.xacro  multi_motor_controllers.yaml  multi_motor_test.urdf.xacro
src/drivers/myactuator_hardware/test/launch/: arm_usbcan_test.launch.py  dual_motor_teleop.launch.py  dual_motor_test.launch.py  multi_motor_test.launch.py
src/drivers/myactuator_hardware/test/scripts/: dual_motor_sine.py  dual_motor_teleop.py  dual_motor_trajectory_teleop.py  test_usbcan_motors.py
src/drivers/myactuator_rmd/: README.md
src/moveit/mobile_manipulator_moveit_config/: CMakeLists.txt  package.xml
src/moveit/mobile_manipulator_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mobile_manipulator.srdf  mobile_manipulator_controllers.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml  servo.rviz  servo_config.yaml
src/moveit/mobile_manipulator_moveit_config/launch/: demo.launch.py
src/moveit/mobile_manipulator_moveit_config/scripts/: pick_place_demo.py
src/navigation/robot_nav2/: CMakeLists.txt  README.md  package.xml
src/navigation/robot_nav2/config/: nav2_params.yaml
src/navigation/robot_nav2/launch/: navigation.launch.py  slam_navigation.launch.py
src/navigation/robot_slam/: CMakeLists.txt  README.md  package.xml
src/navigation/robot_slam/config/: cartographer.lua
src/navigation/robot_slam/launch/: cartographer.launch.py
src/robot_bringup/: CMakeLists.txt  README.md  package.xml
src/robot_bringup/config/: ekf.yaml  md_4wd_controllers_no_odom_tf.yaml  pick_place_config.yaml
src/robot_bringup/launch/: dual_realsense.launch.py  full_system_with_pickplace.launch.py  lidar3d_livox_nav.launch.py  mobile_manipulator_moveit.launch.py
src/robot_bringup/launch/config/: nav2_params.yaml
src/robot_bringup/rviz/: lidar3d_livox_nav.rviz
src/robot_bringup/scripts/: topic_pick_place.py
src/robot_bringup/test/: arm_moveit_hardware.launch.py  arm_teleop.py  calibrate_home.launch.py  full_system.launch.py  integrated_system.launch.py  mm_moveit_demo.launch.py  mm_moveit_hardware.launch.py  mobile_manipulator_moveit_hardware.launch.py  mobile_manipulator_visual_servo.launch.py  moveit_pose_control.py  pick_place.launch.py  visual_servo_controller.py  visual_servo_demo.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/meshes/: D405.stl  VLP16.stl  actuatoor4.stl  actuator.stl  actuator1.stl  actuator2.stl  actuator3.stl  actuator4.stl  forearm_link.stl  left_wheel.stl  lidar_mount.stl  link1.stl  link2.stl  link3.stl  right_wheel.stl  robot_chassis.stl  upperarm_link.stl
src/robot_description/test/: README.md  arm_gripper_hardware.xacro  arm_usbcan_hardware.xacro  frbot_moveit.urdf.xacro  mobile_manipulator_full_hardware.xacro  mobile_manipulator_hardware.xacro  mobile_manipulator_moveit.urdf  mobile_manipulator_moveit.urdf.xacro  ros2_control_arm_gripper.urdf.xacro  ros2_control_arm_usbcan.urdf.xacro  ros2_control_hardware.urdf.xacro  ros2_control_mobile_manipulator.urdf.xacro  ros2_control_moveit.urdf.xacro  ros2_control_sim.urdf.xacro
src/robot_description/test/config/: README.md
src/robot_description/test/launch/: display.launch.py  mobile_manipulator.launch.py
src/robot_description/test/rviz/: frbot.rviz
src/robot_description/urdf/: mobile_manipulator_usbcan_hardware.xacro  robot_core.xacro  ros2_control_mobile_manipulator_usbcan.urdf.xacro
src/robot_description/urdf/arm_only/: arm_standalone.urdf.xacro  manipulator_arm.xacro
src/robot_description/urdf/mobile_only/: mobile_base.xacro
src/robot_web_interface/: CMakeLists.txt  README.md  package.xml
src/robot_web_interface/launch/: web_interface.launch.py
src/robot_web_interface/www/: index.html
src/simulation/robot_gazebo/: CMakeLists.txt  README.md  package.xml
src/simulation/robot_gazebo/config/: README.md  frbot_controllers_sim.yaml  gz_ros_bridge.yaml
src/simulation/robot_gazebo/launch/: frbot_gz_sim.launch.py  frbot_gz_sim_local.launch.py
src/simulation/robot_gazebo/rviz/: frbot_sim.rviz
src/simulation/robot_gazebo/worlds/: empty_worlds.sdf
src/yolo_realsense/: package.xml  setup.py
src/yolo_realsense/yolo_realsense/: yolo_publisher_node.py
