<?xml version="1.0"?>
<package format="3">
  <name>robot_web_interface</name>
  <version>1.0.0</version>
  <description>Web interface for mobile manipulator control</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
